# IndieStudio

./: .gitignore  CMakeLists.txt  README.md  init_system.sh
bonus/mingw32-exe/: Makefile
bonus/mingw32-exe/media/models/: DroppedBonusGhost.dae
media/models/: Bomb.dae  Bonus.dae  ExplosionFrame.dae  Skull.dae  Wall.dae
src/: config.hpp
src/core/: main.cpp
src/ecs/: Component.cpp  Component.hpp  ECSCore.cpp  ECSCore.hpp  Entity.cpp  Entity.hpp  Exceptions.hpp  Ressources.hpp  System.cpp  System.hpp
src/ecs/components/: BlockedComponent.cpp  BlockedComponent.hpp  BombDropperComponent.cpp  BombDropperComponent.hpp  BuffedComponent.cpp  BuffedComponent.hpp  ColliderComponent.cpp  ColliderComponent.hpp  CollisionComponent.cpp  CollisionComponent.hpp  ControllableComponent.cpp  ControllableComponent.hpp  CurseComponent.cpp  CurseComponent.hpp  CurseOnPickComponent.cpp  CurseOnPickComponent.hpp  DisplayableComponent.cpp  DisplayableComponent.hpp  EntityDropperComponent.cpp  EntityDropperComponent.hpp  EphemeralComponent.cpp  EphemeralComponent.hpp  ExplodeComponent.cpp  ExplodeComponent.hpp  HealthComponent.cpp  HealthComponent.hpp  KickableComponent.cpp  KickableComponent.hpp  KickerComponent.cpp  KickerComponent.hpp  KillCounterComponent.cpp  KillCounterComponent.hpp  MortalComponent.cpp  MortalComponent.hpp  MovableComponent.cpp  MovableComponent.hpp  NameComponent.cpp  NameComponent.hpp  OOBKillComponent.cpp  OOBKillComponent.hpp  (+24 more)
src/ecs/data/: Directions.hpp  NumericValue.hpp  Vector2.hpp
src/ecs/entities/: Alphaone.cpp  Alphaone.hpp  Bedrock.cpp  Bedrock.hpp  Bomb.cpp  Bomb.hpp  Brick.cpp  Brick.hpp  ExplosionFrame.cpp  ExplosionFrame.hpp  Faerie.cpp  Faerie.hpp  Player.cpp  Player.hpp  Skull.cpp  Skull.hpp  Sydney.cpp  Sydney.hpp  Wall.cpp  Wall.hpp  Xenotype.cpp  Xenotype.hpp
src/ecs/entities/PowerUps/: DroppedBonusBomb.cpp  DroppedBonusBomb.hpp  DroppedBonusGhost.cpp  DroppedBonusGhost.hpp  DroppedBonusHardness.cpp  DroppedBonusHardness.hpp  DroppedBonusHealth.cpp  DroppedBonusHealth.hpp  DroppedBonusKick.cpp  DroppedBonusKick.hpp  DroppedBonusRange.cpp  DroppedBonusRange.hpp  DroppedBonusSpeed.cpp  DroppedBonusSpeed.hpp  DroppedItem.cpp  DroppedItem.hpp
src/ecs/factories/: ComponentFactory.cpp  ComponentFactory.hpp  EntityFactory.cpp  EntityFactory.hpp  SystemFactory.cpp  SystemFactory.hpp
src/ecs/systems/: BlockedSystem.cpp  BlockedSystem.hpp  BombDropperSystem.cpp  BombDropperSystem.hpp  BuffedSystem.cpp  BuffedSystem.hpp  ColliderSystem.cpp  ColliderSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  ControllableSystem.cpp  ControllableSystem.hpp  CurseOnPickSystem.cpp  CurseOnPickSystem.hpp  CurseSystem.cpp  CurseSystem.hpp  DisplayableSystem.cpp  DisplayableSystem.hpp  EntityDropperSystem.cpp  EntityDropperSystem.hpp  EphemeralSystem.cpp  EphemeralSystem.hpp  ExplodeSystem.cpp  ExplodeSystem.hpp  HealthSystem.cpp  HealthSystem.hpp  KickableSystem.cpp  KickableSystem.hpp  KickerSystem.cpp  KickerSystem.hpp  KillCounterSystem.cpp  KillCounterSystem.hpp  MortalSystem.cpp  MortalSystem.hpp  MovableSystem.cpp  MovableSystem.hpp  NameSystem.cpp  NameSystem.hpp  OOBKillSystem.cpp  OOBKillSystem.hpp  (+24 more)
src/input/: AIBrain.cpp  AIBrain.hpp  Controller.cpp  Controller.hpp  Input.hpp  Keyboard.cpp  Keyboard.hpp
src/input/error/: Errors.hpp
src/irrlicht/: Animations.hpp  Exceptions.hpp
src/irrlicht/game-scene/: GameScene.cpp  GameScene.hpp
src/irrlicht/game-scene/demo-menu/: DemoMenu.cpp  DemoMenu.hpp
src/irrlicht/game-scene/game/: Game.cpp  Game.hpp
src/irrlicht/game-scene/how-to-play/: HowToPlayMenu.cpp  HowToPlayMenu.hpp
src/irrlicht/game-scene/hud/: Button.cpp  Button.hpp
src/irrlicht/game-scene/irr-entity/: IrrEntity.cpp  IrrEntity.hpp
src/irrlicht/game-scene/keys-managing-menu-load/: KeysManagingMenuLoad.cpp  KeysManagingMenuLoad.hpp
src/irrlicht/game-scene/keys-managing-menu-new/: KeysManagingMenuNew.cpp  KeysManagingMenuNew.hpp
src/irrlicht/game-scene/load-game-menu/: LoadGameMenu.cpp  LoadGameMenu.hpp
src/irrlicht/game-scene/main-menu/: MainMenu.cpp  MainMenu.hpp
src/irrlicht/game-scene/new-game-menu/: NewGameMenu.cpp  NewGameMenu.hpp
src/irrlicht/game-scene/pause-menu/: PauseMenu.cpp  PauseMenu.hpp
src/irrlicht/irr-input/event-receiver/: EventReceiver.cpp  EventReceiver.hpp
src/irrlicht/screen/: Screen.cpp  Screen.hpp
src/irrlicht/textbox/: TextBox.cpp  TextBox.hpp
src/map/: Map.cpp  Map.hpp  MapException.hpp
src/sound/: Exception.hpp  SoundSystem.cpp  SoundSystem.hpp
